<resources>
    <string name="app_name">Le Finance App</string>
    <string name="app_description">By Panchito and the Droids</string>
    <string name="app_main_image">Chancho</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="search_menu_button">Search</string>
    <string name="report_menu_button">Report</string>
    <string name="weekly_menu_button">weekly</string>
    <string name="monthly_menu_button">monthly</string>
    <string name="home_menu_button">Home</string>

    <string name="budget_text_view">Balance: $</string>

    <string name="amount">Amount : $</string>
    <string name="type">Type :</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>

    <string name="amount_hint">0.00</string>

    <string-array name="report_values">
        <item>Food</item>
        <item>Transportation</item>
        <item>Education</item>
        <item>Miscellaneous</item>
        <item>Entertainment</item>
    </string-array>

    <string name="search">Search</string>

    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startDate_hint">05/04/2015</string>
    <string name="endDate_hint">05/10/2015</string>
    <string name="date_hint">mm/dd/yyyy</string>


    <string name="daysTypes">Types/Date</string>
    <string name="day1">4th</string>
    <string name="day2">5th</string>
    <string name="day3">6th</string>
    <string name="day4">7th</string>
    <string name="day5">8th</string>
    <string name="day6">9th</string>
    <string name="day7">1oth</string>

    <string name="type1">Type 1</string>
    <string name="type2">Type 2</string>
    <string name="type3">Type 3</string>

    <string name="table">Table</string>
    <string name="graph">Graph</string>

    <string name="weekly">Weekly</string>
    <string name="input">Input</string>
    <string name="title_activity_search_activity">search_activity</string>
    <string name="title_activity_result_activity">result_activity</string>
    <string name="balance_text_view">Balance: $230</string>
    <string name="salary">Salary : $</string>
    <string name="budget">Budget : $</string>

    <string-array name="search_values">
        <item>All</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Miscellaneous</item>
    </string-array>

</resources>
