<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="100"
    >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:textSize="35sp"
            android:textColor="#454545"
            android:gravity="center_vertical|center"
            android:text="@string/app_name"
            android:id="@+id/app_name"
            />


        <ImageView
            android:id="@+id/imgLogo"
            android:contentDescription="@string/app_main_image"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:adjustViewBounds="true"
            android:gravity="center_vertical|center"
            android:src="@drawable/piggy_bank_main"

            />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textColor="#454545"
            android:gravity="center_horizontal"
            android:id="@+id/by_id"
            android:text="@string/app_description"
           />



</LinearLayout>