<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchActions"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:background="@color/button"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table"
            android:textColor="@color/input_text_color"
            android:textSize="25sp"
            android:layout_weight="0.5"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/graph"
            android:textColor="@color/input_text_color"
            android:textSize="25sp"
            android:layout_weight="0.5"
            />


    </LinearLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:id="@+id/actionResult"
        android:layout_below="@+id/searchActions">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/daysTypes"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/type1"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/type2"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/type3"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />





        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/day1"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$10.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$20.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$0.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/day2"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$50.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$10.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$20.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/day3"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$0.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$0.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$10.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/day4"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$28.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$50.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$14.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/day5"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$20.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$10.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$35.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/day6"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$15.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$52.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$12.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"> <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/day7"
            android:textColor="@color/input_text_color"
            android:textSize="15sp"
            android:layout_weight="0.5"
            />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$15.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$34.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="$12.00"
                android:textColor="@color/input_text_color"
                android:textSize="15sp"
                android:layout_weight="0.5"
                />

        </TableRow>


    </TableLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_alignParentBottom="true"-->
        <!-->-->

        <!--<Button-->
            <!--android:layout_width="0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.90"-->
            <!--android:text="@string/submit"-->
            <!--android:id="@+id/weeklySearch"-->
            <!--android:background="@color/submit_button"-->
            <!--android:layout_marginEnd="5dp"-->
            <!--style="?android:attr/borderlessButtonStyle"-->

            <!--/>-->



    <!--</LinearLayout>-->


</RelativeLayout>